# miner

./: .gitignore  Cargo.toml  README.md  config.example.json
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: algorithm.rs  coin.rs  config.rs  error.rs  lib.rs  stats.rs  types.rs
crates/hashers/: Cargo.toml
crates/hashers/src/: equihash.rs  ethash.rs  factory.rs  kawpow.rs  kheavyhash.rs  lib.rs  randomx.rs
crates/stratum/: Cargo.toml
crates/stratum/src/: client.rs  message.rs
crates/worker/: Cargo.toml
crates/worker/src/: engine.rs  lib.rs  manager.rs
patches/hasherkawpow-sys/: Cargo.toml  build.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  types.ts  utils.ts
ui/src/components/: CoinBadge.tsx  CoinIcon.tsx  EditWorkerDialog.tsx  PowerButton.tsx  StatCard.tsx  WorkerRow.tsx
