[package]
name = "miner-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "miner"
path = "src/main.rs"

[dependencies]
miner-core = { workspace = true }
miner-worker = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
