[package]
name = "miner-worker"
version.workspace = true
edition.workspace = true

[dependencies]
miner-core = { workspace = true }
miner-stratum = { workspace = true }
miner-hashers = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hex = "0.4"
